# cortex

./: .gitignore  CHANGELOG.md  Cargo.toml  LANGDOCS.md  README.md
res/: preamble.txt  stdlib.cortex
src/: constants.rs  grammar.pest  lib.rs
src/interpreting/: env.rs  error.rs  heap.rs  interpreter.rs  list.rs  mod.rs  module.rs  preprocessor.rs  type.rs  type_checking_env.rs  type_env.rs  value.rs
src/interpreting/global/: list.rs  mod.rs  string.rs
src/interpreting/mem/: heap.rs
src/joint/: mod.rs  vtable.rs
src/parsing/: mod.rs  parser.rs
src/parsing/ast/: expression.rs  mod.rs  program.rs  statement.rs  top_level.rs  typ.rs  type.rs
src/parsing/codegen/: trait.rs
src/preprocessing/: error.rs  mod.rs  module.rs  preprocessor.rs  program.rs  type_checking_env.rs  type_env.rs
src/preprocessing/ast/: expression.rs  function.rs  function_address.rs  mod.rs  (+4 more)
src/type/: mod.rs  type.rs  type_checking_env.rs  type_env.rs
tests/: contract_tests.rs  core_function_tests.rs  error_tests.rs  extension_tests.rs  extensions_tests.rs  gc_tests.rs  generic_type_bounds_tests.rs  generics_tests.rs  import_tests.rs  interpreter_tests.rs  linked_list_tests.rs  list_tests.rs  parsing_tests.rs  statement_tests.rs  static_function_tests.rs  top_level_tests.rs  type_tests.rs
tests/res/: bundle_file.txt  contract_module_tests.txt  contracts.txt  contracts2.txt  extensions_file.txt  full_file.txt  generic_type_bounds.txt  generics_file.txt  heap_struct_file.txt  import_tests.txt  import_tests2.txt  linked_list_file.txt  module_pathing.txt  multi_module.txt  testlib.txt
(+16 files in other folders)
