[package]
name = "cortex-lang"
version = "1.0.0-alpha2"
edition = "2024"
repository = "https://github.com/DanielGaull/cortex"
homepage = "https://github.com/DanielGaull/cortex"
authors = ["Daniel Gaull"]
license = "MIT"
readme = "README.md"
description = "A simple interpreted language for interfacing with Rust code"

[dependencies]
paste = "1.0.15"
pest = "2.7.15"
pest_derive = "2.7.15"
thiserror = "2.0.11"
